# custom-erpnext-LL

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  LICENSE  Lifeline_TPA_ERPNext_Design_Document.md  README.md  context.md  pyproject.toml
doc/: PO sample.xlsx
docs/: DEVELOPMENT_REQUIREMENTS.md  IMPLEMENTATION_ROADMAP.md  SETUP_WINDOWS_WSL.md
lifeline_tpa/: __init__.py  hooks.py  modules.txt
lifeline_tpa/lifeline_tpa/doctype/claim_record/: claim_record.json  claim_record.py
lifeline_tpa/lifeline_tpa/doctype/claim_removal_batch/: claim_removal_batch.js  claim_removal_batch.json  claim_removal_batch.py  test_claim_removal_batch.py
lifeline_tpa/lifeline_tpa/doctype/claim_removal_item/: claim_removal_item.json  claim_removal_item.py
lifeline_tpa/lifeline_tpa/doctype/claims_po_batch/: claims_po_batch.js  claims_po_batch.py  (+2 more)
lifeline_tpa/public/files/: claim_removal_upload_template.xlsx  claims_po_upload_template.xlsx  payer_receipt_upload_template.xlsx  provider_payment_upload_template.xlsx
lifeline_tpa/services/: bulk_processing.py  claim_removal.py  po_import.py  po_schema.py  processed_po_export.py  revenue_import.py  revenue_processing.py  revenue_schedule.py  settlement_processing.py  settlement_upload.py
lifeline_tpa/setup/: accounting.py  install.py  pilot.py
lifeline_tpa/tests/: test_bulk_processing.py  test_claim_removal.py  test_po_import.py  test_po_schema.py  test_processed_po_export.py  test_revenue_import.py  test_revenue_schedule.py  test_settlement_upload.py  test_upload_templates.py
scripts/: setup_bench.sh
(+34 files in other folders)
