[project]
name = "lifeline_tpa"
authors = [
    { name = "Lifeline TPA", email = "finance@lifelinetpa.com" },
]
description = "Lifeline TPA claims accounting and settlement for ERPNext"
requires-python = ">=3.10,<3.15"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

